en/3.0/config/memory-config.rst
===========================
Use memory-related settings
===========================

This page is generated by Machine Translation from Japanese.

The maximum value of heap memory changes
========================================

If the contents of the crawl settings cause OutOfMemory error similar to
the following.

::

    java.lang.OutOfMemoryError: Java heap space

Increase the maximum heap memory occur. bin/setenv. [sh \| bat] to (in
this case the maximum value set 1024M) will change to-Xmx1024m.

::

    Windowsの場合
    ...-Dpdfbox.cjk.support=true -Xmx1024m

    Unixの場合
    ...-Dpdfbox.cjk.support=true -Xmx1024m"

Crawler side memory maximum value changes
=========================================

Crawler side memory maximum value can be changed. The default is 512 m.

Unplug the commented out webapps/fess/WEB-INF/classes/fess.dicon
crawlerJavaOptions to change, change the-Xmx1024m (in this case the
maximum value set 1024M).

::

    <component name="systemHelper" class="jp.sf.fess.helper.SystemHelper">
            <property name="adminRole">"fess"</property>
            <property name="authenticatedRoles">"role1"</property>
            <property name="crawlerJavaOptions">new String[] {
        "-Djava.awt.headless=true", "-server", "-XX:+UseGCOverheadLimit",
        "-XX:+UseConcMarkSweepGC", "-XX:+CMSIncrementalMode",
        "-XX:+UseTLAB", "-Dpdfbox.cjk.support=true", "-Xmx1024m",
        "-XX:MaxPermSize=128m" }</property>
    </component>
